--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgres://dpg-cq5v5o4s1f4s739fgfug-a:5432/api_spring
+spring.datasource.username=root
+spring.datasource.password=LpJVc6sl0SsbUhp4tgSvu3U3cH7noIws
