--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 			<version>${swagger-version}</version>
 		</dependency>
 
+		
+	<dependency>  
+		<groupId>org.postgresql</groupId>  
+		<artifactId>postgresql</artifactId>  
+	</dependency>
+
 	</dependencies>
 
 	<build>
