--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=api
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgres://dpg-cq5v5o4s1f4s739fgfug-a:5432/api_spring
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgressql://dpg-cq5v5o4s1f4s739fgfug-a:5432/api_spring
 spring.datasource.username=root
 spring.datasource.password=LpJVc6sl0SsbUhp4tgSvu3U3cH7noIws
