--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=api
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgressql://dpg-cq5v5o4s1f4s739fgfug-a:5432/api_spring
+spring.datasource.url=jdbc:postgresql://dpg-cq5v5o4s1f4s739fgfug-a.oregon-postgres.render.com/api_spring
 spring.datasource.username=root
 spring.datasource.password=LpJVc6sl0SsbUhp4tgSvu3U3cH7noIws
